chore(13.1): ship attachments right pane